Add Kafka producer (in MS Deal) and consumer (MS Dossier); config kafka
