# Deal/src/main/resources/openapi/deal-api.yml
@@ -87,6 +87,56 @@ paths:
               schema:
                 $ref: "#/components/schemas/ApplicationError"
 
+  /deal/document/{applicationId}/send:
+    post:
+      parameters:
+        - in: path
+          name: applicationId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      tags:
+        - Deal
+      summary: Request the sending of documents
+      operationId: requestSendDocuments
+      responses:
+        '200':
+          description: OK
+
+  /deal/document/{applicationId}/sign:
+    post:
+      parameters:
+        - in: path
+          name: applicationId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      tags:
+        - Deal
+      summary: Request the signature of documents
+      operationId: requestSignDocuments
+      responses:
+        '200':
+          description: OK
+
+  /deal/document/{applicationId}/code:
+    post:
+      parameters:
+        - in: path
+          name: applicationId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      tags:
+        - Deal
+      summary: Sign documents
+      operationId: signDocuments
+      responses:
+        '200':
+          description: OK
 components:
   schemas:
     LoanApplicationRequestDto:
